# CmakeDemo

./: A.cpp  A.h  CMakeLists.txt  Man.cpp  Man.h  Person.cpp  Person.h  ProjectConstants.h  README.md  main.cpp
file/: FileUtil.h  Singleton.cpp
net/: CMakeLists.txt  UdpClient.cpp  UdpClient.h
net/socket/: UdpServer.cpp  UdpServer.h
person/: Man.h
utils/: Stack.cpp  Stack.h
